--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	
-	<version>0.0.2</version> 
+	<version>0.0.2-SNAPSHOT</version> 
 	
 	<name>maven-web-application</name>
 
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.58.211.210:9000/</sonar.host.url> 
+		<sonar.host.url>http://3.143.170.176:9000/</sonar.host.url> 
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin123</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -94,14 +94,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.220.62.108:8181/chinnytech/repository/Another_one_Release/</url>
+	      <name>ChinnyTech Release Nexus Repository</name>
+	      <url>http://13.58.221.48:8181/repository/Another_one_Release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.220.62.108:8181/chinnytech/repository/Another_one_Snapshot/</url>
+	      <name>ChinnyTech Snapshot Nexus Repository</name>
+	      <url>http://13.58.221.48:8181/repository/Another_one_Snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
