--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	
-	<version>0.0.2-SNAPSHOT</version> 
+	<version>0.0.2</version> 
 	
 	<name>maven-web-application</name>
 
@@ -94,7 +94,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>ChinnyTech Release Nexus Repository</name>
-	      <url>http://3.144.188.228:8181/repository/Lovelyme-Release/</url>
+	      <url>http://127.0.0.1:8081/repository/Blissful/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
